--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
-  "extends": "@rocketseat/eslint-config/node"
+  "extends": "@rocketseat/eslint-config/node",
+  "prettier/prettier": [
+    "error",
+    { "endOfLine": "auto" }
+  ]
   
 }
